--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "@angular/platform-browser-dynamic": "8.0.0",
     "@angular/platform-server": "8.0.0",
     "@angular/router": "8.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.4",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0",
     "ajv": "6.10.0",
     "angular-calendar": "0.27.9",
     "animate.css": "3.7.2",
@@ -58,6 +61,7 @@
     "ng2-nouislider": "1.8.2",
     "ng2-select": "2.0.0",
     "ngx-chips": "1.9.8",
+    "ngx-toastr": "^11.3.0",
     "nouislider": "9.2.0",
     "perfect-scrollbar": "1.1.0",
     "popper.js": "1.15.0",
