--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "ng2-nouislider": "1.8.2",
     "ng2-select": "2.0.0",
     "ngx-chips": "1.9.8",
+    "ngx-spinner": "^9.0.2",
     "ngx-toastr": "^11.3.0",
     "nouislider": "9.2.0",
     "perfect-scrollbar": "1.1.0",
