--- a/package.json
+++ b/package.json
@@ -60,8 +60,10 @@
     "moment": "2.24.0",
     "moment-timezone": "0.5.25",
     "ng2-nouislider": "1.8.2",
+    "ng2-search-filter": "^0.5.1",
     "ng2-select": "2.0.0",
     "ngx-chips": "1.9.8",
+    "ngx-pagination": "^5.0.0",
     "ngx-spinner": "^9.0.2",
     "ngx-toastr": "^11.3.0",
     "nouislider": "9.2.0",
