--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@ngx-translate/http-loader": "^4.0.0",
     "ajv": "6.10.0",
     "angular-calendar": "0.27.9",
+    "angularx-flatpickr": "^6.3.1",
     "animate.css": "3.7.2",
     "arrive": "2.4.1",
     "bootstrap": "4.3.1",
@@ -50,11 +51,13 @@
     "datatables": "1.10.18",
     "datatables.net-bs4": "1.10.19",
     "datatables.net-responsive": "2.2.3",
+    "date-fns": "^2.15.0",
+    "flatpickr": "^4.6.6",
     "fullcalendar": "3.4.0",
     "googleapis": "40.0.0",
     "hammerjs": "2.0.8",
     "jasny-bootstrap": "3.1.3",
-    "jquery": "3.4.1",
+    "jquery": "^3.5.1",
     "jquery-validation": "1.17.0",
     "jqvmap": "1.5.1",
     "moment": "2.24.0",
@@ -79,7 +82,7 @@
     "zone.js": "0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.800.1",
+    "@angular-devkit/build-angular": "^0.1000.6",
     "@angular/cli": "8.0.1",
     "@angular/compiler-cli": "8.0.0",
     "@types/bootstrap": "4.3.0",
